# pasvir

./: .gitignore  README.md  pyproject.toml
pasvir/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
pasvir/static/pasvir/css/: dashboard.css  style.css
pasvir/static/pasvir/js/: cpf-cnpj.js  states-cities.js
pasvir/templates/admin/: base.html
pasvir/templates/pasvir/: auditee_list.html  base.html  document_list.html  edit_auditee.html  edit_document.html  home.html  new_auditee.html  new_document.html  show_auditee.html  show_document.html
pasvir/templatetags/: template_filters.py
project/: settings.py  urls.py
